fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -77,13 +77,15 @@ button {
 }
 
 .title-image {
-    height: auto;
+    display: block;
+    height: 75%;
     width: 50%;
 }
 
 .section-2 {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .section-2-header {
@@ -100,6 +102,7 @@ button {
     padding: 0% 10%;
     gap: 18px;
     padding-top: 32px;
+    justify-content: center;
 }
 
 .box {
